// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`PasswordRequirements renders correctly with empty password 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least 8 characters",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#686868",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 4,
        },
        "testID": "password-requirements-minLength",
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one uppercase letter",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#686868",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 4,
        },
        "testID": "password-requirements-uppercase",
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one lowercase letter",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#686868",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 4,
        },
        "testID": "password-requirements-lowercase",
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one number",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#686868",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 4,
        },
        "testID": "password-requirements-number",
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one special character",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#686868",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 4,
        },
        "testID": "password-requirements-special",
      },
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": "password-requirements",
  },
  "type": "View",
}
`;

exports[`PasswordRequirements renders correctly with a strong password 1`] = `
{
  "$$typeof": Symbol(react.test.json),
  "children": [
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least 8 characters",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1A7F36",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 4,
        },
        "testID": "password-requirements-minLength",
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one uppercase letter",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1A7F36",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 4,
        },
        "testID": "password-requirements-uppercase",
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one lowercase letter",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1A7F36",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 4,
        },
        "testID": "password-requirements-lowercase",
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one number",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1A7F36",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 4,
        },
        "testID": "password-requirements-number",
      },
      "type": "View",
    },
    {
      "$$typeof": Symbol(react.test.json),
      "children": [
        {
          "$$typeof": Symbol(react.test.json),
          "children": [
            {
              "$$typeof": Symbol(react.test.json),
              "children": [
                "At least one special character",
              ],
              "props": {
                "numberOfLines": 0,
                "selectable": undefined,
                "style": {
                  "color": "#1A7F36",
                  "fontFamily": "text-regular",
                  "fontSize": 10,
                  "textAlign": "left",
                },
                "testID": undefined,
              },
              "type": "Text",
            },
          ],
          "props": {},
          "type": "View",
        },
      ],
      "props": {
        "style": {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "marginBottom": 4,
        },
        "testID": "password-requirements-special",
      },
      "type": "View",
    },
  ],
  "props": {
    "style": undefined,
    "testID": "password-requirements",
  },
  "type": "View",
}
`;
